[project]
name = "cpfusion"
version = "0.1.0"
description = "Enhanced Infrared and Visible Image Fusion via Correlation-Driven Rules and Parameter-Free Attention Mechanism"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "torchvision",
    "torchmetrics",
    "tensorboard",
    "kornia",
    "seaborn",
    "albumentations",
    "click",
    "einops",
    "pycocotools",
    "scikit-image",
    "scikit-learn",
    "tqdm",
    "timm",
    "wandb",
    "visdom",
    "matplotlib",
    "cslib>0.2"
]
